feat（1.4.2）: update k8s cluster api (#2028)
* feat: update k8s cluster api

* fix: delete useless

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -248,6 +248,7 @@
     "cluster configuration": "cluster configuration",
     "cluster deployment": "cluster deployment",
     "cluster identity": "cluster identity",
+    "cluster is not ready, please try it later": "cluster is not ready, please try it later",
     "cluster modified successfully": "cluster modified successfully",
     "cluster name input error, please check": "cluster name input error, please check",
     "cluster offline": "cluster offline",
