--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -712,7 +712,8 @@
     "confirm this action": "确认进行此操作",
     "confirm to delete": "确定删除吗",
     "confirm to delete configuration": "确认删除配置",
-    "confirm to delete current {deleteItem}": "确认删除当前 {deleteItem}",
+    "confirm to delete current {deleteItem}": "确认删除当前{deleteItem}",
+    "confirm to delete {name} ?": "确认删除 {name} ？",
     "confirm to remove user": "确认移除用户",
     "confirm to remove user in batches": "确认批量移除用户",
     "contact business": "联系商务",
