fix: fix badge breathing

--- a/locales/en.json
+++ b/locales/en.json
@@ -176,8 +176,8 @@
     "add {name}": "add {name}",
     "added successfully": "added successfully",
     "addon": "addon",
-    "addon detail": "addon detail",
-    "addon service": "addon service",
+    "addon detail": "Add-on detail",
+    "addon service": "Add-on",
     "admin": "admin",
     "administrator": "administrator",
     "advanced search": "advanced search",
