--- a/locales/zh.json
+++ b/locales/zh.json
@@ -176,8 +176,8 @@
     "add {name}": "添加{name}",
     "added successfully": "添加成功",
     "addon": "扩展",
-    "addon detail": "扩展详情",
-    "addon service": "扩展服务",
+    "addon detail": "Add-on 详情",
+    "addon service": "Add-on",
     "admin": "管理后台",
     "administrator": "管理员",
     "advanced search": "高级搜索",
