--- a/locales/en.json
+++ b/locales/en.json
@@ -246,7 +246,6 @@
     "back to top": "back to top",
     "backup person": "backup person",
     "backup time": "backup time",
-    "bandwidth": "bandwidth",
     "based on": "based on",
     "basic": "basic",
     "basic configuration": "basic configuration",
@@ -285,7 +284,6 @@
     "check detail": "check detail",
     "check log": "check log",
     "check whether your request is approved": "check whether your request is approved.",
-    "choose": "choose",
     "choose cluster": "choose cluster",
     "choose global configuration": "choose global configuration",
     "choose self": "choose self",
@@ -306,7 +304,6 @@
     "closed at": "closed at",
     "cloud accounts": "cloud accounts",
     "cloud source": "cloud source",
-    "cloud ssd": "cloud ssd",
     "cloud vendor": "cloud vendor",
     "cluster": "cluster",
     "cluster detail": "cluster detail",
@@ -326,7 +323,6 @@
     "component": "component",
     "config": "config",
     "config sheet": "config sheet",
-    "configs detail": "configs detail",
     "configuration information": "configuration information",
     "configuration mode": "configuration mode",
     "configuration upgrade": "configuration upgrade",
@@ -414,6 +410,7 @@
     "develop": "develop",
     "developer": "developer",
     "device ID": "device ID",
+    "dingding work notice": "dingding work notice",
     "directory": "directory",
     "disable": "disable",
     "disabled": "disabled",
@@ -429,8 +426,6 @@
     "due today": "due today",
     "due tomorrow": "due tomorrow",
     "duration": "duration",
-    "duration unit": "duration unit",
-    "duration(month)": "duration(month)",
     "edit": "edit ",
     "edit notification channel": "edit notification channel",
     "edit {name}": "edit {name}",
@@ -542,10 +537,8 @@
     "less than": "less than",
     "link": "link",
     "load": "load",
-    "load balancing": "load balancing",
     "load more": "load more",
     "loading": "loading",
-    "local ssd": "local ssd",
     "lock-repository-tip": "the repository is locked, if you need to submit code and other operations, please contact the application administrator to unlock",
     "log": "log",
     "log analysis": "log analysis",
@@ -560,8 +553,6 @@
     "manual authorization": "manual authorization",
     "manually create": "manually create",
     "mark": "mark",
-    "maximum IOPS": "maximum IOPS",
-    "maximum throughput": "maximum throughput",
     "medium": "medium",
     "member": "member",
     "member added successfully": "member added successfully",
@@ -576,7 +567,6 @@
     "message": "message",
     "meters": "meters",
     "microService": "microService",
-    "microservice platform": "microservice platform",
     "middleware chart": "middleware chart",
     "millicore": "millicore",
     "min": "min",
@@ -647,7 +637,6 @@
     "other settings": "other settings",
     "out params exist the same {key}": "out params exist the same {key}",
     "out params {name} setting is abnormal": "out params {name} setting is abnormal",
-    "overtime": "overtime",
     "overview": "overview",
     "page 1": "page 1",
     "page loading completed": "page loading completed",
@@ -660,14 +649,11 @@
     "path prefix": "path prefix",
     "path starts with /": "path starts with /",
     "pause": "pause",
-    "pay as you go": "pay as you go",
-    "pay by traffic": "pay by traffic",
     "pending": "pending",
     "pending approval": "pending approval",
     "pending execution": "pending execution",
     "performance interval": "performance interval",
     "period": "period",
-    "phone": "phone",
     "pipeline": "pipeline",
     "platform": "platform",
     "platform configs": "platform configs",
@@ -725,7 +711,6 @@
     "province": "province",
     "public": "public",
     "public project": "public project",
-    "queries per second": "queries per second",
     "queuing": "queuing",
     "queuing for resources": "queuing for resources",
     "ready": "ready",
@@ -784,7 +769,6 @@
     "rest": "rest",
     "restore": "restore",
     "result": "result",
-    "return modification": "return modification",
     "revert deprecated version": "revert deprecated version",
     "revoke": "revoke",
     "revoked": "revoked",
@@ -802,7 +786,6 @@
     "search by Addon name or ID": "search by Addon name or ID",
     "search by keyword": "Input keyword search",
     "search by keywords": "search by keywords",
-    "search by labels": "search by labels",
     "search by name": "search by name",
     "search by nickname, username, email or mobile number": "search by nickname, username, email or mobile number",
     "search by path or description": "search by path or description",
@@ -828,7 +811,6 @@
     "setting permissions": "setting permissions",
     "silence period policy": "silence period policy",
     "site message": "site message",
-    "skip": "skip",
     "small": "small",
     "specific content": "specific content",
     "specification": "specification",
@@ -860,7 +842,6 @@
     "submitter": "submitter",
     "succeed": "succeed",
     "such as": "such as",
-    "support load balancing": "support load balancing",
     "support the creation and deletion of all projects in the organization, as well as the operation and management of project members and quotas.": "Support the creation and deletion of all projects in the organization, as well as the operation and management of project members and quotas.",
     "sure to exit the current {name}?": "sure to exit the current {name}?",
     "switch": "switch",
@@ -962,7 +943,6 @@
     "whether to enable": "whether to enable",
     "whether to put {name} in public": "whether to put {name} in public",
     "whether to use a proxy": "whether to use a proxy",
-    "year": "year",
     "yesterday": "yesterday",
     "you have new site message, please pay attention to check": "you have new site message, please pay attention to check",
     "{action} successfully": "{action} successfully",
