--- a/locales/zh.json
+++ b/locales/zh.json
@@ -47,7 +47,7 @@
     "December": "12月",
     "Deploy": "部署",
     "Deployment not allowed in {env} in network block period.": "组织处于封网期间，{env}禁止部署！",
-    "DingTalk": "钉钉",
+    "DingTalk": "钉钉群",
     "DingTalk address": "钉钉地址",
     "Dubai": "迪拜",
     "East China {num}": "华东{num}",
@@ -246,7 +246,6 @@
     "back to top": "回到顶部",
     "backup person": "备份人",
     "backup time": "备份时间",
-    "bandwidth": "带宽",
     "based on": "基于",
     "basic": "基础版",
     "basic configuration": "基本配置",
@@ -285,7 +284,6 @@
     "check detail": "查看详情",
     "check log": "查看日志",
     "check whether your request is approved": "查看您的请求是否审批通过。",
-    "choose": "选择",
     "choose cluster": "选择集群",
     "choose global configuration": "选择全局配置",
     "choose self": "选择自己",
@@ -306,7 +304,6 @@
     "closed at": "关闭于",
     "cloud accounts": "云账户管理",
     "cloud source": "云服务",
-    "cloud ssd": "云SSD",
     "cloud vendor": "云厂商",
     "cluster": "集群",
     "cluster detail": "集群详情",
@@ -326,7 +323,6 @@
     "component": "组件",
     "config": "配置",
     "config sheet": "配置单",
-    "configs detail": "配置详情",
     "configuration information": "配置信息",
     "configuration mode": "配置模式",
     "configuration upgrade": "配置更新",
@@ -414,6 +410,7 @@
     "develop": "开发",
     "developer": "开发者",
     "device ID": "设备ID",
+    "dingding work notice": "钉钉工作通知",
     "directory": "目录",
     "disable": "禁用",
     "disabled": "禁用",
@@ -429,8 +426,6 @@
     "due today": "今天截止",
     "due tomorrow": "明天截止",
     "duration": "时长",
-    "duration unit": "时长单位",
-    "duration(month)": "时长(月）",
     "edit": "编辑",
     "edit notification channel": "编辑通知渠道",
     "edit {name}": "编辑{name}",
@@ -542,10 +537,8 @@
     "less than": "小于",
     "link": "链接",
     "load": "负载",
-    "load balancing": "负载均衡",
     "load more": "加载更多",
     "loading": "正在加载更多数据",
-    "local ssd": "本地SSD",
     "lock-repository-tip": "该仓库已锁定，如需提交代码等操作请联系应用管理员解锁",
     "log": "日志",
     "log analysis": "日志分析",
@@ -560,8 +553,6 @@
     "manual authorization": "手动授权",
     "manually create": "手动创建",
     "mark": "标记",
-    "maximum IOPS": "最大 IOPS",
-    "maximum throughput": "最大吞吐量",
     "medium": "中",
     "member": "成员",
     "member added successfully": "添加成员成功",
@@ -576,7 +567,6 @@
     "message": "消息",
     "meters": "米",
     "microService": "微服务",
-    "microservice platform": "微服务平台",
     "middleware chart": "中间件图表",
     "millicore": "毫核",
     "min": "分钟",
@@ -647,7 +637,6 @@
     "other settings": "其他设置",
     "out params exist the same {key}": "出参存在相同的{key}",
     "out params {name} setting is abnormal": "出参 {name} 设置异常",
-    "overtime": "超时",
     "overview": "总览",
     "page 1": "第一页",
     "page loading completed": "网页加载完成",
@@ -660,14 +649,11 @@
     "path prefix": "路径前缀",
     "path starts with /": "路径以/开头",
     "pause": "暂停",
-    "pay as you go": "按需支付",
-    "pay by traffic": "按量支付",
     "pending": "待审批",
     "pending approval": "待审核",
     "pending execution": "待执行",
     "performance interval": "性能区间",
     "period": "周期",
-    "phone": "手机",
     "pipeline": "流水线",
     "platform": "平台",
     "platform configs": "平台配置",
@@ -725,7 +711,6 @@
     "province": "省市区",
     "public": "公有",
     "public project": "公开项目",
-    "queries per second": "每秒查询数",
     "queuing": "排队中",
     "queuing for resources": "排队等待资源中",
     "ready": "就绪",
@@ -784,7 +769,6 @@
     "rest": "重置",
     "restore": "恢复",
     "result": "结果",
-    "return modification": "返回修改",
     "revert deprecated version": "撤销弃用版本",
     "revoke": "撤销",
     "revoked": "已撤销",
@@ -802,7 +786,6 @@
     "search by Addon name or ID": "输入Addon名称或Id搜索",
     "search by keyword": "输入关键词搜索",
     "search by keywords": "按关键字搜索",
-    "search by labels": "按标签搜索",
     "search by name": "按名称搜索",
     "search by nickname, username, email or mobile number": "通过昵称、用户名、邮箱或手机号搜索",
     "search by path or description": "按路径或描述搜索",
@@ -828,7 +811,6 @@
     "setting permissions": "设置权限",
     "silence period policy": "沉默周期策略",
     "site message": "站内信",
-    "skip": "跳过",
     "small": "小型",
     "specific content": "具体内容",
     "specification": "规格",
@@ -860,7 +842,6 @@
     "submitter": "提交人",
     "succeed": "成功",
     "such as": "如",
-    "support load balancing": "支持负载均衡",
     "support the creation and deletion of all projects in the organization, as well as the operation and management of project members and quotas.": "支持组织下所有项目创建、删除等管理管理，以及项目成员、配额等维度的项目运营管理",
     "sure to exit the current {name}?": "确认退出当前{name}?",
     "switch": "开关",
@@ -962,7 +943,6 @@
     "whether to enable": "是否启用",
     "whether to put {name} in public": "是否公开{name}",
     "whether to use a proxy": "是否使用代理",
-    "year": "年",
     "yesterday": "昨天",
     "you have new site message, please pay attention to check": "您有新的站内信，请注意查看",
     "{action} successfully": "{action}成功",
