fix(dop): side navigation text bug

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1457,6 +1457,7 @@
     "oom": "OOM",
     "op-affect-related-app": "this operation may affect all associated apps, please be cautious!",
     "open": "open",
+    "operator": "operator",
     "organize notification groups to set up notifications": "organize notification groups to set up notifications",
     "output parameter": "output parameter",
     "output parameter name": "output parameter name",
