--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1457,6 +1457,7 @@
     "oom": "OOM",
     "op-affect-related-app": "此操作有可能会影响所有关联应用，请谨慎操作！",
     "open": "待处理",
+    "operator": "运维",
     "organize notification groups to set up notifications": "组织好通知群组以便设置通知",
     "output parameter": "出参",
     "output parameter name": "出参名",
