fix: modify flameData

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1900,6 +1900,7 @@
     "ERROR COUNT DESC": "ERROR COUNT DESC",
     "Erda service": "Erda service",
     "Failed to cancel. Please try again late.": "Failed to cancel. Please try again late.",
+    "Flame Graph": "Flame Graph",
     "HTTP call": "HTTP call",
     "IP blocking": "IP blocking",
     "If you delete a user, all authorized APIs for that user will be deleted.": "if you delete a user, all of the user's authorized API will be deleted!",
@@ -1920,6 +1921,7 @@
     "The selected interface weight will be set to": "The selected interface weight will be set to",
     "URL path": "URL path",
     "URL path prefix": "URL path prefix",
+    "Waterfall Plot": "Waterfall Plot",
     "Web transaction": "Web transaction",
     "a domain name can only contain numbers, lowercase letters, *, -": "a domain name can only contain numbers, lowercase letters, *, -",
     "abnormal traffic interception": "abnormal traffic interception",
