--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1900,6 +1900,7 @@
     "ERROR COUNT DESC": "错误次数倒序",
     "Erda service": "Erda服务",
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
+    "Flame Graph": "火焰图",
     "HTTP call": "HTTP 调用",
     "IP blocking": "IP 拦截",
     "If you delete a user, all authorized APIs for that user will be deleted.": "如果删除用户，该用户的所有已授权API都会删除！",
@@ -1920,6 +1921,7 @@
     "The selected interface weight will be set to": "所选接口权重将置为",
     "URL path": "URL 路径",
     "URL path prefix": "URL 路径前缀",
+    "Waterfall Plot": "瀑布图",
     "Web transaction": "Web事务",
     "a domain name can only contain numbers, lowercase letters, *, -": "域名只能包含数字、小写字母、*、-",
     "abnormal traffic interception": "异常流量拦截",
