refactor markdown view mode to enhance experience

--- a/locales/en.json
+++ b/locales/en.json
@@ -312,6 +312,7 @@
     "cluster overview": "cluster overview",
     "cluster resource": "cluster resource",
     "clusters": "clusters",
+    "collapse description": "collapse description",
     "colour": "colour",
     "comment": "comment",
     "commit": "commit",
@@ -427,9 +428,11 @@
     "due tomorrow": "due tomorrow",
     "duration": "duration",
     "edit": "edit ",
+    "edit description": "edit description",
     "edit notification channel": "edit notification channel",
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
+    "editing": "editing",
     "enable": "enable",
     "enabled successfully": "enabled successfully",
     "enter key to save quickly": "enter key to save quickly",
@@ -457,6 +460,7 @@
     "exited the organization successfully": "exited the organization successfully",
     "exited the project successfully": "exited the project successfully",
     "expand": "expand",
+    "expand description": "expand description",
     "export": "export",
     "export configuration": "export configuration",
     "export format": "export format",
