--- a/locales/zh.json
+++ b/locales/zh.json
@@ -312,6 +312,7 @@
     "cluster overview": "集群总览",
     "cluster resource": "集群资源",
     "clusters": "集群",
+    "collapse description": "收起描述",
     "colour": "着色",
     "comment": "评论",
     "commit": "提交",
@@ -427,9 +428,11 @@
     "due tomorrow": "明天截止",
     "duration": "时长",
     "edit": "编辑",
+    "edit description": "编辑描述",
     "edit notification channel": "编辑通知渠道",
     "edit {name}": "编辑{name}",
     "edited successfully": "编辑成功",
+    "editing": "编辑中",
     "enable": "启用",
     "enabled successfully": "启用成功",
     "enter key to save quickly": "回车键快速保存",
@@ -457,6 +460,7 @@
     "exited the organization successfully": "退出组织成功",
     "exited the project successfully": "退出项目成功",
     "expand": "展开",
+    "expand description": "展开描述",
     "export": "导出",
     "export configuration": "导出配置",
     "export format": "导出格式",
