feat(msp): add new msp home page
feat(msp): add new msp home page

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1896,6 +1896,7 @@
     "Choose different indicators and user features for comparative analysis for different business types and scenarios, to locate issues accurately.": "不同的业务类型和业务场景选择不同的指标和用户特征进行对比分析，精准定位问题所在",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
+    "DevOps Project": "DevOps 项目",
     "ERROR COUNT DESC": "错误次数倒序",
     "Erda service": "Erda服务",
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
@@ -1912,6 +1913,7 @@
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "请输入20个字符内英文数字或下划线组成的名称",
     "Please enter a name consisting of letters, numbers, underscores, hyphens, slashes and dots within 50 characters.": "请输入50个字符内英文、数字、_、-、/, . 组成的名称",
     "Please enter your DingTalk address, separated by comma.": "请输入钉钉地址，用“,”分隔",
+    "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "提供一站式的服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能。",
     "REQUEST COUNT DESC": "调用次数倒序",
     "RPC call": "RPC 调用",
     "RPC transaction": "RPC事务",
@@ -2208,6 +2210,8 @@
     "key authentication mode": "Key认证模式",
     "labels filter": "标签过滤",
     "largest isolation ratio": "实例最大隔离比例",
+    "last 1 day alarm": "最近1天告警",
+    "last active time": "最近活跃时间",
     "last trigger": "最后一次触发",
     "last trigger time": "最后触发时间",
     "latency": "延时",
@@ -2479,6 +2483,7 @@
     "user experience index": "用户体验指数",
     "user features": "用户特征",
     "view cluster domain name": "查看集群域名",
+    "view guide": "查看指南",
     "view log": "查看日志",
     "view tracing information": "查看链路信息",
     "visit (7 days)": "访问量(7天内)",
