fix(msp): fix the bug when the stack is empty in the error details page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2257,6 +2257,7 @@
     "no data": "no data",
     "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
     "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically",
+    "no stack": "no stack",
     "node list": "node list",
     "node traffic management": "node traffic management",
     "normal": "normal",
