--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -249,11 +249,9 @@
     "cluster is not ready, please try it later": "cluster is not ready, please try it later",
     "cluster modified successfully": "cluster modified successfully",
     "cluster name input error, please check": "cluster name input error, please check",
-    "cluster offline": "cluster offline",
     "cluster registration command": "cluster registration command",
     "cluster specifications": "cluster specifications",
     "cluster ssh infos": "cluster ssh infos",
-    "cluster upgrade": "cluster upgrade",
     "cluster {name} console": "cluster {name} console",
     "code hosting project": "code hosting project",
     "common-messages-suitable-for": "common messages are suitable for scenarios such as asynchronous decoupling between systems, peak shaving and valley filling, log service, Cache synchronization of large-scale machines, and real-time calculation and analysis.",
@@ -360,7 +358,6 @@
     "indicator extract": "indicator extract",
     "indicator name": "indicator name",
     "initialization failed": "initialization failed",
-    "initialize retry": "initialize retry",
     "input to search": "input to search",
     "instance list": "instance list",
     "instance specification": "instance specification",
@@ -389,7 +386,6 @@
     "machine label": "machine label",
     "machine type": "machine type",
     "machines": "machines",
-    "management method": "management method",
     "master-slave": "master-slave",
     "masters occupy 3 nodes": "masters occupy 3 nodes",
     "masters, LB and platform share 1 node": "masters, LB and platform share 1 node",
@@ -543,7 +539,6 @@
     "reference counts": "reference counts",
     "reference detail": "reference detail",
     "regions-provide-intranet-default": "all regions (except public network regions) provide intranet access by default, which is safe, stable and reliable.",
-    "register command": "register command",
     "related pod information": "related pod information",
     "report name": "report name",
     "report template": "report template",
@@ -1045,6 +1040,7 @@
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
+    "click to edit": "click to edit",
     "click to expand": "click to expand",
     "clone application": "clone application",
     "cluster used by the environment": "cluster used by the environment",
@@ -2118,7 +2114,6 @@
     "endpoints": "endpoints",
     "enter IP address, separated by comma": "enter IP address, separated by comma",
     "entry domain name passthrough": "entry domain name passthrough",
-    "environment entrance": "environment entrance",
     "environments": "environments",
     "equal": "equal",
     "error analysis": "error analysis",
@@ -2245,7 +2240,6 @@
     "memory usage limit": "memory usage limit",
     "method": "method",
     "microService API management": "microService API management",
-    "microService governance": "service maps",
     "millisecond(s)": "millisecond(s)",
     "min time-consuming(ms)": "min time-consuming(ms)",
     "minimum": "minimum",
@@ -2328,7 +2322,6 @@
     "process": "process",
     "producer": "producer",
     "project report": "reports",
-    "project type": "project type",
     "proportion": "proportion",
     "province": "province",
     "query cache": "query cache",
@@ -2452,7 +2445,6 @@
     "times/hour": "times/hour",
     "times/minute": "times/minute",
     "times/second": "times/second",
-    "token management": "token management",
     "tolerable": "tolerable",
     "topology": "topology",
     "total connections": "total connections",
