--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -249,11 +249,9 @@
     "cluster is not ready, please try it later": "该集群未就绪，请稍后再试",
     "cluster modified successfully": "修改集群成功",
     "cluster name input error, please check": "集群名输入错误，请校对",
-    "cluster offline": "集群下线",
     "cluster registration command": "集群注册命令",
     "cluster specifications": "集群规格",
     "cluster ssh infos": "集群内SSH信息",
-    "cluster upgrade": "集群升级",
     "cluster {name} console": "集群 {name} 控制台",
     "code hosting project": "代码托管项目",
     "common-messages-suitable-for": "普通消息适用于系统间异步解耦、削峰填谷、日志服务、大规模机器的Cache同步以及实时计算分析等场景。",
@@ -360,7 +358,6 @@
     "indicator extract": "指标提取",
     "indicator name": "指标名称",
     "initialization failed": "初始化失败",
-    "initialize retry": "初始化重试",
     "input to search": "可输入形如“host:10.168.0.1”格式进行查询",
     "instance list": "实例列表",
     "instance specification": "实例规格",
@@ -389,7 +386,6 @@
     "machine label": "机器标签",
     "machine type": "机器类型",
     "machines": "机器列表",
-    "management method": "管理方式",
     "master-slave": "主从",
     "masters occupy 3 nodes": "主节点占用3台机器",
     "masters, LB and platform share 1 node": "主节点、负载均衡、平台复用1个节点，用于演示",
@@ -543,7 +539,6 @@
     "reference counts": "引用计数",
     "reference detail": "引用详情",
     "regions-provide-intranet-default": "所有地域（除公网地域外）默认提供内网访问方式，安全、稳定、可靠。",
-    "register command": "注册命令",
     "related pod information": "关联Pod信息",
     "report name": "报告名称",
     "report template": "报告模板",
@@ -1045,6 +1040,7 @@
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
+    "click to edit": "点击即可编辑",
     "click to expand": "点击展开",
     "clone application": "克隆应用",
     "cluster used by the environment": "环境所用的集群",
@@ -2118,7 +2114,6 @@
     "endpoints": "流量入口管理",
     "enter IP address, separated by comma": "可输入 ip 地址，使用 , 分隔",
     "entry domain name passthrough": "入口域名透传",
-    "environment entrance": "环境入口",
     "environments": "环境",
     "equal": "等于",
     "error analysis": "错误分析",
@@ -2245,7 +2240,6 @@
     "memory usage limit": "内存使用限制",
     "method": "调用方法",
     "microService API management": "微服务API管理",
-    "microService governance": "微服务治理",
     "millisecond(s)": "毫秒",
     "min time-consuming(ms)": "最小耗时(ms)",
     "minimum": "最小值",
@@ -2328,7 +2322,6 @@
     "process": "进程分析",
     "producer": "生产者",
     "project report": "项目报告",
-    "project type": "项目类型",
     "proportion": "占比",
     "province": "省份",
     "query cache": "查询缓存",
@@ -2452,7 +2445,6 @@
     "times/hour": "次/小时",
     "times/minute": "次/分钟",
     "times/second": "次/秒",
-    "token management": "Token管理",
     "tolerable": "可容忍",
     "topology": "拓扑",
     "total connections": "总连接数",
