refactor markdown view mode to enhance experience (#2075)
* refactor markdown view mode to enhance experience

* lint code

* typo

* add remark-gfm to support md render

* change interaction logic

* style enhance

* i18n

--- a/locales/en.json
+++ b/locales/en.json
@@ -312,6 +312,7 @@
     "cluster overview": "cluster overview",
     "cluster resource": "cluster resource",
     "clusters": "clusters",
+    "collapse description": "collapse description",
     "colour": "colour",
     "comment": "comment",
     "commit": "commit",
@@ -457,6 +458,7 @@
     "exited the organization successfully": "exited the organization successfully",
     "exited the project successfully": "exited the project successfully",
     "expand": "expand",
+    "expand description": "expand description",
     "export": "export",
     "export configuration": "export configuration",
     "export format": "export format",
@@ -701,7 +703,6 @@
     "project description": "project description",
     "project icon": "project icon",
     "project identifier": "project identifier",
-    "project list": "project list",
     "project name": "project name",
     "project setting": "settings",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
