--- a/locales/zh.json
+++ b/locales/zh.json
@@ -312,6 +312,7 @@
     "cluster overview": "集群总览",
     "cluster resource": "集群资源",
     "clusters": "集群",
+    "collapse description": "收起描述",
     "colour": "着色",
     "comment": "评论",
     "commit": "提交",
@@ -457,6 +458,7 @@
     "exited the organization successfully": "退出组织成功",
     "exited the project successfully": "退出项目成功",
     "expand": "展开",
+    "expand description": "展开描述",
     "export": "导出",
     "export configuration": "导出配置",
     "export format": "导出格式",
@@ -701,7 +703,6 @@
     "project description": "项目描述",
     "project icon": "项目图标",
     "project identifier": "项目标识",
-    "project list": "项目列表",
     "project name": "项目名称",
     "project setting": "项目设置",
     "project-app-name-tip": "只能使用小写字母或数字开头和结尾，连接符号可以使用 -",
