feat: upper case locale

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -87,6 +87,7 @@
     "Memory quota": "Memory quota",
     "Memory quota usage": "Memory quota usage",
     "Memory usage": "Memory usage",
+    "Microservice Observation Project": "Microservice Observation Project",
     "Monthly": "Monthly",
     "MySQL Erda database": "MySQL Erda database",
     "MySQL Host": "MySQL Host",
@@ -395,7 +396,6 @@
     "message content rules": "message content rules",
     "message template": "message template",
     "message title rules": "message title rules",
-    "microservice Observation Project": "microservice Observation Project",
     "microservice governance desc": "provide one-stop micro-service system observation, including service monitoring, link tracking, dashboard and alarm functions",
     "middleware": "middleware",
     "middleware container chart": "middleware container chart",
