--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -88,6 +88,7 @@
     "Memory quota usage": "内存配额使用",
     "Memory usage": "内存使用",
     "Monthly": "每月",
+    "Microservice Observation Project": "微服务观测项目",
     "MySQL Erda database": "MySQL Erda数据库名",
     "MySQL Host": "MySQL主机",
     "MySQL Password": "MySQL密码",
@@ -395,7 +396,6 @@
     "message content rules": "消息内容规则",
     "message template": "消息模板定义",
     "message title rules": "消息标题规则",
-    "microservice Observation Project": "微服务观测项目",
     "microservice governance desc": "提供一站式的微服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能",
     "middleware": "中间件",
     "middleware container chart": "中间件容器图表",
