style: update displaying duration of tooltip in flame graph

--- a/locales/en.json
+++ b/locales/en.json
@@ -374,6 +374,7 @@
     "creator": "creator",
     "cron has started, waiting for execution": "cron has started, waiting for execution",
     "cron has stopped": "cron has stopped",
+    "current": "current",
     "current SLA": "current SLA",
     "current month": "current month",
     "current user": "current user",
