feat: modify project management menu

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -831,6 +831,7 @@
     "JSON format error": "JSON format error",
     "JVM analysis": "JVM analysis",
     "Library-app-intro": "A module/library is a code product that does not need to be deployed, and can be used in other applications after release, such as a Java jar package or npm package.",
+    "Management": "Management",
     "Manual entry": "Manual entry",
     "Maximum value of decline": "Maximum value of decline",
     "Merged": "Merged",
@@ -843,6 +844,7 @@
     "New version available. Upgrade now?": "New version available. Upgrade now?",
     "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.": "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.",
     "O & M": "O & M",
+    "Operator": "Operator",
     "Platform default rules. Please add custom rules if necessary.": "platform default rules, if you need to adjust by adding custom rules",
     "Please enter the issue title": "Please enter the issue title",
     "Please enter the repository address started with http or https.": "Please enter the repository address started with http or https.",
@@ -1185,6 +1187,7 @@
     "edit notification": "edit notification",
     "edit service instance": "edit service instance",
     "edit test plan": "edit test plan",
+    "efficiency measure": "efficiency measure",
     "email": "email",
     "emergency level": "emergency level",
     "empty, not empty": "Empty, Not empty",
@@ -1453,7 +1456,6 @@
     "oom": "OOM",
     "op-affect-related-app": "this operation may affect all associated apps, please be cautious!",
     "open": "open",
-    "operator": "operator",
     "organize notification groups to set up notifications": "organize notification groups to set up notifications",
     "output parameter": "output parameter",
     "output parameter name": "output parameter name",
