--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -831,6 +831,7 @@
     "JSON format error": "JSON 格式错误",
     "JVM analysis": "JVM 分析",
     "Library-app-intro": "库/模块是一种不需要部署的代码产物，发布后可以在其他应用中被依赖使用，比如一个 Java jar 包或 npm 包。",
+    "Management": "管理",
     "Manual entry": "手动录入",
     "Maximum value of decline": "衰退最大值",
     "Merged": "已合并",
@@ -843,6 +844,7 @@
     "New version available. Upgrade now?": "版本可升级，是否升级",
     "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.": "数值：请按照标准的数学表达式规范填写。示例如下： 区间支持开区间和闭区间、示例闭区间：[-20,20] 表示集合：<[-200,200],-1,2>。",
     "O & M": "应用运维",
+    "Operator": "运维",
     "Platform default rules. Please add custom rules if necessary.": "平台默认规则，如需要调整请通过添加自定义规则来完成",
     "Please enter the issue title": "请输入事项标题",
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
@@ -1185,6 +1187,7 @@
     "edit notification": "编辑通知",
     "edit service instance": "编辑服务实例",
     "edit test plan": "编辑测试计划",
+    "efficiency measure": "效能度量",
     "email": "邮箱",
     "emergency level": "紧急程度",
     "empty, not empty": "为空、不为空",
@@ -1453,7 +1456,6 @@
     "oom": "OOM",
     "op-affect-related-app": "此操作有可能会影响所有关联应用，请谨慎操作！",
     "open": "待处理",
-    "operator": "运维",
     "organize notification groups to set up notifications": "组织好通知群组以便设置通知",
     "output parameter": "出参",
     "output parameter name": "出参名",
