add no desc holder

--- a/locales/en.json
+++ b/locales/en.json
@@ -592,6 +592,7 @@
     "new password": "new password",
     "nickname": "nickname",
     "no available version": "no available version",
+    "no description yet": "no description yet",
     "no items selected": "no items selected",
     "no more data": "no more data",
     "no more than {size} characters": "no more than {size} characters",
