--- a/locales/zh.json
+++ b/locales/zh.json
@@ -592,6 +592,7 @@
     "new password": "新密码",
     "nickname": "昵称",
     "no available version": "暂无可用版本",
+    "no description yet": "暂无描述",
     "no items selected": "未选中任何项",
     "no more data": "没有更多数据",
     "no more than {size} characters": "不超过{size}字符",
