fix(dop): parameter details interactive optimization

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -713,6 +713,7 @@
     "expand branch directory selection document or create a new document": "展开分支目录选择文档或新建文档",
     "file upload": "文件上传",
     "folder": "文件夹",
+    "form": "表单",
     "form configuration": "表单配置信息",
     "form edit": "表单编辑",
     "form of text": "形式的文本",
@@ -779,6 +780,7 @@
     "startDate": "开始日期",
     "state": "状态",
     "test case": "用例",
+    "text": "文本",
     "text edit": "文本编辑",
     "the current data volume exceeds 500kb, please click": "当前数据量超过500kb，请点击",
     "the uploaded file must not exceed {size}M": "上传的文件不得超过{size}M",
