--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -713,6 +713,7 @@
     "expand branch directory selection document or create a new document": "expand branch directory selection document or create a new document",
     "file upload": "file upload",
     "folder": "folder",
+    "form": "form",
     "form configuration": "form configuration",
     "form edit": "form edit",
     "form of text": "form of text",
@@ -779,6 +780,7 @@
     "startDate": "startDate",
     "state": "state",
     "test case": "test case",
+    "text": "text",
     "text edit": "text edit",
     "the current data volume exceeds 500kb, please click": "the current data volume exceeds 500kb, please click",
     "the uploaded file must not exceed {size}M": "the uploaded file must not exceed {size}M",
