feat(dop): dop gantt left tree expand and create issue button

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1162,6 +1162,7 @@
     "disassociate": "disassociate",
     "disassociated successfully": "disassociated successfully",
     "disk size": "disk size",
+    "display on demand": "display on demand",
     "displayed name": "displayed name",
     "distributed collaboration": "distributed collaboration",
     "do not start with a space": "do not start with a space",
