--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1162,6 +1162,7 @@
     "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
+    "display on demand": "按需求显示",
     "displayed name": "显示名称",
     "distributed collaboration": "分布式协作",
     "do not start with a space": "不要以空格开头",
